updated email template

--- a/Fluid-Hybrid-Email-Template-2018.html
+++ b/Fluid-Hybrid-Email-Template-2018.html
@@ -163,7 +163,7 @@
         height: auto;
     }
     .left-sidebar .contents {
-        /*font-size: 14px;*/
+        font-size: 14px;
         
     }
     .left-sidebar a {
@@ -191,7 +191,7 @@
         height: auto;
     }
     .right-sidebar .contents {
-       /* font-size: 14px;*/
+        font-size: 14px;
     }
     .right-sidebar a {
         /*color: #85ab70;*/
@@ -237,11 +237,11 @@
                                 <tr>
                                     <td class="inner">
                                         <table class="contents">
-                                            <tr>
+                                            <!-- <tr>
                                                 <td>
                                                         <img src="images/two-column-01.jpg" width="280" alt="" />
                                                 </td>
-                                            </tr>
+                                            </tr> -->
                                             <tr>
                                                 <td class="text">
                                                         Maecenas sed ante pellentesque, posuere leo id, eleifend dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. 
@@ -260,11 +260,11 @@
                                 <tr>
                                     <td class="inner">
                                         <table class="contents">
-                                            <tr>
+                                            <!-- <tr>
                                                 <td>
                                                         <img src="images/two-column-01.jpg" width="280" alt="" />
                                                 </td>
-                                            </tr>
+                                            </tr> -->
                                             <tr>
                                                 <td class="text">
                                                         Maecenas sed ante pellentesque, posuere leo id, eleifend dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. 
