--- a/Fluid-Hybrid-Email-Template-2018.html
+++ b/Fluid-Hybrid-Email-Template-2018.html
@@ -79,7 +79,7 @@
         width: 100%;
     } 
     .img100 {
-        width:100%;
+        max-width:100%;
         height:auto;
         display: block;
     }
