--- a/Fluid-Hybrid-Email-Template-2018.html
+++ b/Fluid-Hybrid-Email-Template-2018.html
@@ -208,6 +208,19 @@
             <![endif]-->
             <table class="outer" align="center">
                 <tr>
+                    <td class="one-column">
+                        <table width="100%">
+                            <tr>
+                                <td align="center" style="background:#ededed; background-color:#ededed; text-align:center;padding-top:15px; padding-bottom:15px;">
+                                    <a href="#" target="_blank">
+                                        <img align="center" alt="Image" border="0" class="center autowidth" src="http://placehold.it/187x50" style="outline: none; text-decoration: none; -ms-interpolation-mode: bicubic; clear: both; border: 0; height: auto; float: none; width: 100%; max-width: 187px; " title="Image" width="187">
+                                    </a>
+                                </td>
+                            </tr>
+                        </table>
+                    </td>
+                </tr>
+                <tr>
                     <td class="full-width-image">
                         <img src="http://placehold.it/630x200" width="600" alt="" />
                     </td>
@@ -239,7 +252,7 @@
                                         <table class="contents">
                                             <tr>
                                                 <td>
-                                                        <img src="images/two-column-01.jpg" width="280" alt="" />
+                                                        <img src="http://placehold.it/400x150" width="280" alt="" />
                                                 </td>
                                             </tr>
                                             <tr>
@@ -262,7 +275,7 @@
                                         <table class="contents">
                                             <tr>
                                                 <td>
-                                                        <img src="images/two-column-01.jpg" width="280" alt="" />
+                                                        <img src="http://placehold.it/400x150" width="280" alt="" />
                                                 </td>
                                             </tr>
                                             <tr>
