--- a/Fluid-Hybrid-Email-Template-2018.html
+++ b/Fluid-Hybrid-Email-Template-2018.html
@@ -196,6 +196,35 @@
     .right-sidebar a {
         color: #85ab70;
     }
+    @media only screen and (max-device-width: 600px){
+        .two-column .column.copy,
+        .two-column.flushed .column.copy{
+            width:100%;
+            max-width: 300px;
+            
+        }
+        .one-column.title .inner.contents{
+            text-align: center !important;
+        }
+        .one-column.title .inner.contents img{
+            margin-bottom: 10px;
+        }
+
+        .right-sidebar .column,
+        .left-sidebar .column{
+            max-width:100% !important;
+        }
+        .left-sidebar .column{
+            text-align: center !important;
+        }
+        .left-sidebar .mobile-button{
+            text-align: center !important;
+            width:100% !important;
+        }
+        .left-sidebar .mobile-date{
+            width:250px !important;
+        }
+    }
     </style>
 </head>
 <body>
